# mtlog-rs

./: Cargo.toml  README.md
docs/superpowers/plans/: 2026-04-23-log-filter.md
docs/superpowers/specs/: 2026-04-23-log-filter-design.md
examples/: multi_threaded_logging_with_progress.rs
mtlog/: Cargo.toml  README.md
mtlog-core/: Cargo.toml  README.md
mtlog-core/src/: config.rs  lib.rs  log_filter.rs  log_rotation.rs  log_writer.rs  utils.rs
mtlog-progress/: Cargo.toml  README.md
mtlog-progress/examples/: async_multi_threaded_logging_with_progress.rs  iterator_progress.rs  multi_threaded_logging_with_progress.rs
mtlog-progress/src/: iter.rs  lib.rs
mtlog-tokio/: Cargo.toml  README.md
mtlog-tokio/examples/: async_log_rotation.rs  async_multi_threaded_logging.rs
mtlog-tokio/src/: lib.rs  utils.rs
mtlog/examples/: log_rotation.rs  multi_threaded_logging.rs
mtlog/src/: lib.rs  log_writer.rs  utils.rs
src/: lib.rs  progress_bar.rs  utils.rs
