[package]
name = "mtlog"
version = "0.1.0"
edition = "2021"
authors = ["Antoine Renaud <antoine.renaud91@gmail.com>"]
description = "Extract type safe structured data from environment variables with procedural derive macros"
license = "GPL-3.0-only"
repository = "https://github.com/AntoineRenaud91/mtlog-rs"
homepage = "https://github.com/AntoineRenaud91/mtlog-rs"
keywords = ["log", "config", "progress", "multi-thread", "concurrent"]
documentation = "https://docs.rs/mtlog-rs"
categories = ["config","concurrency"]


[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
log = { version = "0.4.22", features = ["std"] }
uuid = { version = "1.10.0", features = ["v4"] }
