[package]
name = "mtlog-core"
version = "0.2.0"
edition = "2024"
authors = ["Antoine Renaud <antoine.renaud91@gmail.com>"]
description = "Core utilities for mtlog - shared logging infrastructure."
license = "MIT"
repository = "https://github.com/AntoineRenaud91/mtlog-rs"
homepage = "https://github.com/AntoineRenaud91/mtlog-rs"
keywords = ["log", "config", "progress", "multi-thread", "concurrent"]
documentation = "https://docs.rs/mtlog-core"
categories = ["config", "concurrency"]

[dependencies]
chrono = "0.4.38"
colored = "3.0.0"
crossbeam-channel = "0.5.15"
derive_from_env = "1"
log = { version = "0.4.22", features = ["std"] }
uuid = { version = "1.10.0", features = ["v4"] }
