[package]
name = "mtlog-progress"
version = "0.2.0"
edition = "2021"
authors = ["Antoine Renaud <antoine.renaud91@gmail.com>"]
description = "A progress bar implementation working gracefully with mtlog's logger."
license = "MIT"
repository = "https://github.com/AntoineRenaud91/mtlog-rs"
homepage = "https://github.com/AntoineRenaud91/mtlog-rs"
keywords = ["log", "config", "progress", "multi-thread", "concurrent"]
documentation = "https://docs.rs/mtlog-progress"
categories = ["config","concurrency"]

[dependencies]
colored = "3.0.0"
log = "0.4.22"
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
mtlog = {path="../mtlog"}
mtlog-tokio = {path="../mtlog-tokio"}
tokio = { version = "1.40.0", features = ["full"] }
