[package]
name = "mtlog-tokio"
version = "0.1.1"
edition = "2021"
authors = ["Antoine Renaud <antoine.renaud91@gmail.com>"]
description = "Scoped logging for tokio runtimes with support for log files."
license = "GPL-3.0-only"
repository = "https://github.com/AntoineRenaud91/mtlog-rs"
homepage = "https://github.com/AntoineRenaud91/mtlog-rs"
keywords = ["log", "config", "progress", "multi-thread", "concurrent"]
documentation = "https://docs.rs/mtlog"
categories = ["config","concurrency"]


[dependencies]
chrono = "0.4.38"
colored = "3.0.0"
log = { version = "0.4.22", features = ["std"] }
tokio = { version = "1.40.0", features = ["rt"] }
uuid = { version = "1.10.0", features = ["v4"] }
[dev-dependencies]
tokio = {version = "1.40.0", features = ["full"]}
