[package]
name = "mtlog-tokio"
version = "0.2.0"
edition = "2021"
authors = ["Antoine Renaud <antoine.renaud91@gmail.com>"]
description = "Scoped logging for tokio runtimes with support for log files."
license = "MIT"
repository = "https://github.com/AntoineRenaud91/mtlog-rs"
homepage = "https://github.com/AntoineRenaud91/mtlog-rs"
keywords = ["log", "config", "progress", "multi-thread", "concurrent"]
documentation = "https://docs.rs/mtlog"
categories = ["config", "concurrency"]

[dependencies]
log = { version = "0.4.22", features = ["std"] }
mtlog-core = {version="0.1.0", path = "../mtlog-core" }
tokio = { version = "1.40.0", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
