[package]
name = "mtlog"
version = "0.3.0"
edition = "2024"
authors = ["Antoine Renaud <antoine.renaud91@gmail.com>"]
description = "Multi-threaded logger with support for log files."
license = "MIT"
repository = "https://github.com/AntoineRenaud91/mtlog-rs"
homepage = "https://github.com/AntoineRenaud91/mtlog-rs"
keywords = ["log", "config", "progress", "multi-thread", "concurrent"]
documentation = "https://docs.rs/mtlog"
categories = ["config", "concurrency"]

[dependencies]
log = { version = "0.4.22", features = ["std"] }
mtlog-core = { version="0.2.0", path = "../mtlog-core" }
